--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-jsonformatter",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Vue.js 2.0 compatible json formatter",
   "main": "src/index.js",
   "author": "Kristjan Metsalu",
@@ -14,10 +14,10 @@
     "json-formatter-js": "^1.3.0"
   },
   "peerDependencies": {
-    "vue": "^2.2.1"
+    "vue": ">=2.0.0"
   },
   "engines": {
-    "node": ">= 7.0.0",
-    "npm": ">= 4.0.0"
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
